--- a/styless.css
+++ b/styless.css
@@ -99,13 +99,17 @@ span.price {
   float: right;
   color: grey;
 }
+#addaddresss{
+  width: 10%;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+}
 
-/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other (and change the direction - make the "cart" column go on top) */
-@media (max-width: 800px) {
+/* @media (max-width: 800px) {
   .row {
     flex-direction: column-reverse;
   }
   .col-25 {
     margin-bottom: 20px;
   }
-}
+} */
